# Estudos-Engenharia-de-Dados

./: arquivos.py  boby.py  database.db  exemplo.csv  exemplo_lista.py  main.py
part_01_logica/: dicionario.py  exercicios.py
part_02_arquivos/: analise_vendas.py
part_3_poo/: csv_class.py  heranca.py  poo.py
part_3_poo/classes/: AbstractDataSource.py  CsvSource.py  FilesSource.py  __main__.py
part_3_poo/data/csv_files/: teste.csv
part_4_sql/: main.py  pyproject.toml
