[project]
name = "part-4-sql"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme Moreno",email = "guilhermemoreno200@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "sqlmodel (>=0.0.38,<0.0.39)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
